2014-09-19  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: show_security_module_linux(): check HAVE_APPARMOR,
	  not HAVE_SYS_APPARMOR_H to allow building on Ubuntu Lucid (which does
	  not provide aa_is_enabled()).

2014-09-18  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Bump date.
	  - Highlight non-display options.
	* src/procenv.c:
	  - show_capabilities_linux(): Added CAP_AUDIT_READ.
	  - main(): Allow '--exec' to come at the end of the command-line
	    (the only non-display option this is valid for).
	* src/procenv.h: die(): Output to stderr, not stdout.
	* src/tests/check_all_args.in:
	  - New test to ensure procenv can exec itself.
	  - Enable tests to ensure procenv detects illegal placement of
	    non-display options after any display option.
	  - Fixed check on unknown capabilities.
	  - Test to ensure a non-display option is disallowed after
	    a display option is now more comprehensive.
	  - src/tests/check_all_args.in: Ensure an empty environment is tolerated.

2014-08-19  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: Restore Coverity 0.0 defect density:
	  - translate(): Cleanup on error path.
	  - pstring_create(): Cleanup on error path.
	* src/tests/check_all_args.in: Warn if more capabilities found
	  than procenv is unaware of.

2014-08-14  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: More examples.
	* configure.ac: Add profiling for debug mode.

2014-07-04  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: Correct guard used around procenv_getcpu()
	  and split_fields().

2014-07-03  James Hunt  <james.hunt@ubuntu.com>

	* src/pr_list.c: 
	  - New functions:
	    - pr_list_append_str()
	    - pr_list_appendn_str()
	    - pr_list_prependn_str()
	* src/procenv.c: 
	  - procenv_getcpu(): A {RHEL,Centos} 5-pecific hack to fully
	    resolve LP: #1333194 by working around fact that glibc on that
	    platform does not provide sched_getcpu(3).

2014-06-26  James Hunt  <james.hunt@ubuntu.com>
