@@ -1,3 +1,10 @@
+2015-07-08  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - Update copyright.
+	  - show_mounts_linux(): Don't truncate fsid.
+	  - show_mounts_bsd(): Don't truncate fsid.
+
 2014-09-19  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c: show_security_module_linux(): check HAVE_APPARMOR,
